# invenio-config-tugraz

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/: translations.yml
.github/workflows/: tests.yml  translations.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_config_tugraz/: __init__.py  base_permissions.py  cli.py  components.py  config.py  ext.py  facets.py  generators.py  permissions.py  permissionsPolicy.py  rdm_permissions.py  tasks.py  utils.py  version.py  views.py
invenio_config_tugraz/config_templates/tugraz/: notes.jinja  saml.cfg.jinja
invenio_config_tugraz/custom_fields/: __init__.py
invenio_config_tugraz/notifications/: __init__.py  builders.py
invenio_config_tugraz/permissions/: __init__.py  generators.py  policies.py  roles.py
invenio_config_tugraz/requests/: __init__.py  events.py
invenio_config_tugraz/restrictions/access_right/: access_right.csv  access_right_limit.csv
invenio_config_tugraz/saml/idp/: idp.json  idp.xml
invenio_config_tugraz/saml/idp/cert/: sp.crt  sp.key
invenio_config_tugraz/saml/onelogin/: onelogin.json  onelogin.xml
invenio_config_tugraz/saml/onelogin/cert/: sp.key
invenio_config_tugraz/templates/invenio_app_rdm/help/: search.de.html
invenio_config_tugraz/templates/invenio_config_tugraz/: base.html  index.html
invenio_config_tugraz/templates/security/email/: welcome.html  welcome.txt
invenio_config_tugraz/translations/: messages.pot
invenio_config_tugraz/translations/de/LC_MESSAGES/: messages.po
tests/: conftest.py  test_generators.py  test_invenio_config_tugraz.py  test_permissions.py  test_policies.py
