# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2025 Graz University of Technology.
#
# invenio-config-tugraz is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-config-tugraz
version = attr: invenio_config_tugraz.__version__
description = "Invenio module that adds tugraz configs."
long_description = file: README.rst, CHANGES.rst
keywords = invenio config TU-Graz
license = MIT
author = "Graz University of Technology"
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-config-tugraz
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.12
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    invenio-cache>=1.1.1
    invenio-i18n>=2.0.0
    invenio-rdm-records>=19.0.0,<20.0.0
    invenio-curations>=0.1.0

[options.extras_require]
tests =
    invenio-app>=1.5.0
    invenio-app-rdm>=13.0.0
    invenio-search[opensearch2]>=2.1.0
    pytest-black>=0.6.0
    pytest-invenio>=2.1.0
    ruff>=0.5.3
    Sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_config_tugraz = invenio_config_tugraz:InvenioConfigTugraz
invenio_base.blueprints =
    invenio_config_tugraz = invenio_config_tugraz.views:ui_blueprint
invenio_i18n.translations =
    messages = invenio_config_tugraz
invenio_config.module =
    invenio_config_tugraz = invenio_config_tugraz.config
invenio_base.finalize_app =
    invenio_config_tugraz = invenio_config_tugraz.ext:finalize_app

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_config_tugraz/translations/

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = mojib.wali@tugraz.at
mapping-file = babel.ini
output-file = invenio_config_tugraz/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_config_tugraz/translations/messages.pot
output-dir = invenio_config_tugraz/translations/

[update_catalog]
input-file = invenio_config_tugraz/translations/messages.pot
output-dir = invenio_config_tugraz/translations/

[isort]
profile=black

[check-manifest]
ignore = *-requirements.txt

[tool:pytest]
addopts = --black --cov=invenio_config_tugraz --cov-report=term-missing
testpaths = tests invenio_config_tugraz
live_server_scope = module
